--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">WEBSTUDIO</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
-                <li><a href="index.html">Studio</a></li>
+                <li><a href="./index.html">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
-            <address>
-                <a href="mailto: info@devstudio.com">info@devstudio.com</a>
-                <a href="tel: +11 (000) 111-11-11">+11 (000) 111-11-11</a>
-            </address>
         </nav>
+        <address>
+            <a href="mailto: info@devstudio.com">info@devstudio.com</a>
+            <a href="tel: +11 (000) 111-11-11">+11 (000) 111-11-11</a>
+        </address>
     </header>
     <main>
         <section>
@@ -26,7 +26,7 @@
                 Effective Solutions
             for Your Business
             </h1>
-            <button type="submit">Order Service</button>
+            <button type="button">Order Service</button>
         </section>
         <section>
             <h2 hidden>Our benefits</h2>
@@ -54,22 +54,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/Mark Guerrero.jpg" alt="">
+                    <img src="./images/Mark Guerrero.jpg" alt="Mark Guerrero" width="264">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/Tom Ford.jpg" alt="">
+                    <img src="./images/Tom Ford.jpg" alt="Tom Ford" width="264">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/Camila Garcia.jpg" alt="">
+                    <img src="./images/Camila Garcia.jpg" alt="Camila Garcia" width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Daniel Wilson.jpg" alt="">
+                    <img src="./images/Daniel Wilson.jpg" alt="Daniel Wilson" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -77,7 +77,7 @@
         </section>
     </main>
     <footer>
-        <a href="index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
